--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_STRING = mongodb+srv://jenntoops:Corky1266Toops@cluster0.nhrru.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://jenntoops:Corky1266Toops@cluster0.nhrru.mongodb.net/Coffee?retryWrites=true&w=majority
